add home,contact,blog,projects etc

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home</title>
+  <title>About Us</title>
   <style>
     
   </style>
@@ -18,9 +18,14 @@
     <a href="contact.html">Contact</a>
   </nav>
 </header>
-<h1>Welcome to Bivzy</h1>
-<p>Your space to learn and grow in .NET, Angular, SQL, and full-stack development.</p>
-<p>Explore blogs, projects, and tutorials below.</p>
+<h1>About Bivzy</h1>
+<p>Bivzy is a digital space created to share knowledge, tutorials, and projects for developers.</p>
+
+<h2>Our Mission</h2>
+<p>To empower developers by providing simple, practical, and hands-on guides for modern tech stacks.</p>
+
+<h2>Our Vision</h2>
+<p>Become a go-to platform for aspiring and professional developers to grow their skills.</p>
 
 </body>
 </html>
