--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Home</title>
+  <title>Blog</title>
   <style>
     
   </style>
@@ -18,9 +18,12 @@
     <a href="contact.html">Contact</a>
   </nav>
 </header>
-<h1>Welcome to Bivzy</h1>
-<p>Your space to learn and grow in .NET, Angular, SQL, and full-stack development.</p>
-<p>Explore blogs, projects, and tutorials below.</p>
+<h1>Blog Posts</h1>
+<ul>
+  <li><a href="#">Optimizing Async APIs in .NET</a> – Oct 2025</li>
+  <li><a href="#">Top 5 Angular Tips for Developers</a> – Sep 2025</li>
+  <li><a href="#">SQL Query Optimization Tricks</a> – Aug 2025</li>
+</ul>
 
 </body>
 </html>
